# infosec

./: CMakeLists.txt  Coder.cpp  Coder.h  Decoder.cpp  Decoder.h  DegreeTable.cpp  DegreeTable.h  IntModuloP.cpp  IntModuloP.h  Makefile  Matrix.cpp  Matrix.h  README.md  includes.h  myclient.cpp  myserver.cpp
slides/: Makefile  slides.tex
tests/: GASP ML.ipynb  block_matrix_test.cpp  codec_example.cpp  coder_test.cpp  dg_test.cpp  horner_test.cpp  intmodp_test.cpp  multiplier.cpp
